--- a/app/templates/app/layout.html
+++ b/app/templates/app/layout.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ title }}</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     {% load staticfiles %}
     <link rel="stylesheet" type="text/css" href="{% static 'app/content/site.css' %}" />
     <script src="{% static 'app/scripts/modernizr-2.6.2.js' %}"></script>
@@ -12,8 +13,8 @@
 <body>
     <header>
         <ul>
-            <li><p>ПРОТРОН</p></li>
-            <li><p style="text-align: left;">Разработка и производство<br />силовой электроники</p></li>
+            <li><p>Протрон</p></li>
+            <li class="descr">Разработка и производство<br />силовой электроники</li>
             <li class="item">Продукция</li>
             <li class="item">Контакты</li>
             <li class="item">Наши проекты</li>
@@ -25,10 +26,12 @@
     </div>
         <footer>
             <content>
-                <p style="font-size: 36px;">г. Москва ул. Барклая д. 6 стр.5</p>
-                <p style="font-size: 30px; color: #66cccc;">+7(499)-550-30-25</p>
-                <p style="font-size: 24px; color: #999999;">© 2019 ПРОТРОН<br />Разработка и производство силовой электроники</p>
-                <p style="font-size: 14px; color: black;">Develop KomeR</p>
+                <!--<a class="header__link" href="mailto:info@archi.ru">
+                    <a class="header__link" href="http://protron.ru/kontakty/">-->
+                <p style="font-size: 28px;">г. Москва ул. Барклая д. 6 стр.5</p>
+                <p style="font-size: 24px; color: #66cccc;"><i class="fa fa-phone img-24" aria-hidden="true"></i>+7(499)-550-30-25</p>
+                <p style="font-size: 18px; color: #999999;">Разработка и производство силовой электроники<br />© 2019 ПРОТРОН</p>
+                <p style="font-size: 12px; color: black;">Develop KomeR</p>
             </content>
         </footer>
 
